--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <img
               src='images/pizza-white.svg'
               alt='pizza slice'
-              class='h-8 w-8 mr-2 inline'
+              class='h-8 w-8 mr-2 hidden md-inline'
             />
           </span>
-          <span class='text-xl hidden'>
+          <span class='text-xl inline md-hidden'>
             <img
               src='images/fpc-wordmark.svg'
               alt='frozen pizza club'
@@ -46,6 +46,7 @@
           </span>
         </a>
       </div>
+    </nav>
     <div class='min-h-screen bg-light-tan'>
       <main class='flex flex-col items-center p-4'>
         <div class='text-3xl text-carrot font-semibold py-4'>
@@ -67,9 +68,9 @@
               class='underline'
             >
               Instagram
-            </a> is the only place where you can enjoy our hot frozen pizza content 🍕⚡️.
+            </a> is the best place to enjoy our hot frozen pizza content 🍕⚡️.
           </div>
-          <figure class='flex flex-col items-center p-4'>
+          <figure class='max-w-screen-sm flex flex-col items-center p-4'>
             <img
               src='images/fpc-logo.svg'
               alt='Frozen Pizza Club Logo'
