--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <nav class='flex items-center justify-between flex-wrap bg-carrot py-6 px-4'>
       <div class='flex items-center flex-shrink-0 text-dark-violet pr-4'>
         <a class='text-dark-violet font-bold hover-underline' href='/'>
-          <span class='text-xl inline'>
+          <!-- <span class='text-xl inline'>
             <img
               src='images/pizza-white.svg'
               alt='pizza slice'
               class='h-8 w-8 mr-2 hidden md-inline'
             />
-          </span>
-          <span class='text-xl inline md-hidden'>
+          </span> -->
+          <span class='text-xl inline'>
             <img
               src='images/fpc-wordmark.svg'
               alt='frozen pizza club'
@@ -48,27 +48,25 @@
       </div>
     </nav>
     <div class='min-h-screen bg-light-tan'>
-      <main class='flex flex-col items-center p-4'>
+      <main class='flex flex-col items-center text-center p-4'>
         <div class='text-3xl text-carrot font-semibold py-4'>
           Welcome, pizza enthusiasts!
         </div>
         <div class='text-dark-violet leading-7 max-w-screen-sm pt-2'>
           <div class='pb-4'>
-            Frozen Pizza Club was founded in 2020 by a small group of pizza ethuasiasts who
-            wanted to share their passion with the world.
+            Frozen Pizza Club was founded in 2020 by a small group of pizza ethuasiasts
+            who wanted to share our passion with the world.
           </div>
           <div class='pb-4'>
-            Sadly, we got busy, and this project never got fully baked.
+            Sadly, we all got busy, and this project never got fully baked.
           </div>
           <div>
             Our
             <a
               href='https://www.instagram.com/frozenpizza.club/'
               target='_blank'
-              class='underline'
-            >
-              Instagram
-            </a> is the best place to enjoy our hot frozen pizza content 🍕⚡️.
+              class='underline text-dark-violet'
+            >Instagram</a>&nbsp;is the best place to go to enjoy our hot frozen pizza content 🍕⚡️.
           </div>
           <figure class='max-w-screen-sm flex flex-col items-center p-4'>
             <img
@@ -81,9 +79,9 @@
               <a
                 href='https://artadriana.com/'
                 target='_blank'
-                class='underline'
+                class='underline text-gray-400'
               >
-                <span class=''>Adriana Belinski</span>
+                Adriana Belinski
               </a>
             </figcaption>
           </figure>
